src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_origin__c</fullName>
        <formula>CASE( Origin, &quot;Email&quot;, IMAGE(&quot;/resource/IconEmail&quot;, &quot;Email&quot;), 
&quot;Phone&quot;, IMAGE(&quot;/resource/IconPhone&quot;, &quot;Phone&quot;), 
&quot;Facebook&quot;, IMAGE(&quot;/resource/IconFacebook&quot;, &quot;Facebook&quot;), 
&quot;Twitter&quot;, IMAGE(&quot;/resource/IconTwitter&quot;, &quot;Twitter&quot;), 
&quot;Instagram&quot;, IMAGE(&quot;/resource/IconInstagram&quot;, &quot;Instagram&quot;), 
&quot;YouTube&quot;, IMAGE(&quot;/resource/IconWeb&quot;, &quot;YouTube&quot;), 
&quot;Chat&quot;, IMAGE(&quot;/resource/IconChat&quot;, &quot;Chat&quot;), 
&quot;Web&quot;, IMAGE(&quot;/resource/IconWeb&quot;, &quot;Web&quot;), 
&quot;Community&quot;, IMAGE(&quot;/resource/IconDevice&quot;, &quot;Community&quot;), 
&quot;Device&quot;, IMAGE(&quot;/resource/IconDevice&quot;, &quot;Device&quot;), 
IMAGE(&quot;/resource/IconPhone&quot;, &quot;Phone&quot;))</formula>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Deployment</description>
        <label>Related Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User Story</description>
        <label>Related User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>Case_origin__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Copado_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Copado Support</label>
        <queue>Copado_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>Case_origin__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>Case_origin__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Chat</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Chat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Copado</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <description>Copado Service Requests</description>
        <label>Copado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Social</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>